# saltax

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .singularity_inner  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: create-utilix-config.sh
.github/workflows/: pypi_install.yml  test_package.yml
extra_requirements/: requirements-tests.txt
jobs/: .singularity_inner  README.md  config.ini  config_ybe.ini  job.py  submit.py
notebooks/: README.md  ambience_interference.ipynb  example.ipynb  example_events.ipynb  example_minimal.ipynb  example_peaks.ipynb
saltax/: README.md  __init__.py  contexts.py  test_utils.py  utils.py
saltax/instructions/: .singularity_inner  README.md  __init__.py  generator.py
saltax/match/: README.md  __init__.py  match.py  utils.py  visual.py
saltax/patches/: README.md  __init__.py  straxen_2.py  straxen_3.py
saltax/plugins/: README.md  __init__.py  csv_input.py  f_raw_records.py  peaklets.py  raw_records.py  records.py  s_peaklets.py  s_raw_records.py  s_records.py
tests/: conftest.py  test_basics.py  test_contexts.py  test_instructions.py  test_make.py  test_match.py
